<resources>
    <string name="app_name">Celeste Daylight Control</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_username">USERNAME</string>
    <string name="str_register">Register</string>
    <string name="str_register_desc">To keep your settings and presets synced across all your devices</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_first_name">FIRST NAME</string>
    <string name="str_last_name">LAST NAME</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="str_confirm_password">CONFIRM PASSWORD</string>
    <string name="str_sign_in">S I G N I N</string>
    <string name="str_sign_in_1">SIGN IN</string>
    <string name="str_txt_username">USERNAME</string>
    <string name="str_txt_password">PASSWORD</string>
    <string name="str_txt_surname">SURNAME</string>
    <string name="str_txt_name">NAME</string>
    <string name="str_txt_email">EMAIL</string>
    <string name="str_txt_address">ADDRESS</string>
    <string name="str_txt_sign_up">Sign Up</string>
    <string name="str_btn_login">LOGIN</string>
    <string name="str_btn_register">REGISTER</string>
    <string name="str_nav_dashboard">Dashboard</string>
    <string name="str_nav_modes">Modes</string>
    <string name="str_nav_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="press_again_exit_app">Press again to exit app</string>
    <string name="str_nav_logout">Logout</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="not_available">n/a</string>
    <string name="ok">Ok</string>
    <string name="lbl_image">Image</string>
    <string name="str_no_data">Could not load the requested data</string>
    <string name="cancel">Cancel</string>
    <string name="err_msg_name">Firstname cannot be empty</string>
    <string name="err_msg_lastname">Lastname cannot be empty</string>
    <string name="err_msg_email">Email Address is Required</string>
    <string name="err_msg_password">Password is Required</string>
    <string name="err_msg_confirm_password">Passwords Do Not Match</string>
    <string name="logo">logo</string>
    <string name="edit">Edit Profile</string>
    <string name="str_nav_about">About</string>
    <string name="about_text">Celeste Daylight’s Dynamic Daylight Emulation is a breakthrough technology that enables people to emulate and experience the full benefits of natural daylight in places they never imagined possible.</string>
    <string name="app_version">Version 2.0</string>
    <string name="str_Dashboard">Dashboard</string>
    <string name="str_general_settings">GENERAL SETTINGS</string>
    <string name="str_mode_name">Mode Name</string>
    <string name="str_preset_name">Preset Name</string>
    <string name="str_from_time">Time</string>
    <string name="str_to_time">Time</string>
    <string name="str_to">To</string>
    <string name="str_update">Update</string>
    <string name="str_save">SAVE</string>
    <string name="str_mode_icon">Mode Icon</string>
    <string name="str_no_mode_selected">No Mode Selected</string>
    <string name="str_default_modes">DEFAULT MODES</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="str_custom_modes">CUSTOM MODES</string>
    <string name="str_cust_mode_placeholder">Custom Modes Will Appear Here</string>
    <string name="str_security_settings">Security Settings</string>
    <string name="str_auto_home">Automatic Modes Throughout The Day Today</string>
    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>

    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>
    <string name="dfu_settings_title">DFU Settings</string>
    <string name="dfu_lib_version">DFU Library version 1.8.0</string>

    <string name="dfu_feature_title_long">DEVICE FIRMWARE UPDATE</string>
    <dimen name="dfu_feature_title_long_margin">-186dp</dimen>

    <string name="dfu_example_files_created">Example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_example_new_files_created">New example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_scripts_created">DFU script files were copied to /sdcard/Nordic Semiconductor.</string>

    <string name="not_supported">The device does not have required services.</string>
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_add_device">ADD DEVICE</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="action_disconnecting">DISCONNECTING…</string>

    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>

    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Invalid Email or Password</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_email">Enter Valid Email</string>

    <string name="devices_list_title">Bluetooth devices</string>
    <string name="devices_list_scanning">Scanning for nearby devices…</string>
    <string name="devices_list_start_scan">Scan for nearby devices</string>
    <string name="devices_list_available">Available</string>
    <string name="devices_list_bonded">Bonded</string>
    <string name="devices_list_bonding">Bonding…</string>


    <string name="state_connecting">Connecting…</string>

    <string name="configuration_empty">This configuration is empty.</string>
    <string name="configuration_deleted">Configuration was deleted.</string>

    <string name="notif_uart_device_connected">UART device connected</string>


    <string name="dfu_action_select_file">SELECT FILE</string>

    <string name="dfu_alert_no_filebrowser_title">File Browser not found</string>
    <string name="dfu_alert_no_filebrowser_message">File browser application has not been found on your device. Would you like to download one?</string>
    <string name="str_learn_more">Learn More</string>
    <string name="str_your_name">your name</string>
    <string name="str_my_presets">My Presets</string>
    <string name="str_sync">Sync</string>
    <string name="content_description_more">More</string>
    <string name="str_profile">Profile</string>
    <string name="str_your_location">Port Elizabeth, ZA</string>
    <string-array name="dfu_app_file_browser">
        <item>Drive</item>
        <item>File Manager</item>
        <item>Total Commander</item>
        <item>Search for others</item>
    </string-array>
    <string-array name="dfu_app_file_browser_action">
        <item>market://details?id=com.google.android.apps.docs</item>
        <item>market://details?id=com.rhmsoft.fm</item>
        <item>market://details?id=com.ghisler.android.TotalCommander</item>
        <item>market://search?q=file manager</item>
    </string-array>
    //to be removed
    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>
    <string name="bonding_failed">Bonding failed.</string>

    <string name="channel_connected_devices_title">Background connections</string>
    <string name="channel_connected_devices_description">Shows a notification when a device is connected in background.</string>
    <string name="channel_files_title">Files</string>
    <string name="channel_files_description">Shows notifications when new files has been saved.</string>
    <string name="channel_proximity_warnings_title">Proximity warnings</string>
    <string name="channel_proximity_warnings_description">Shows notifications when a proximity device got out of range.</string>
    <string name="str_cellphone">CELLPHONE</string>
    <string name="step_of">Step %1$d of %2$d</string>
    <string name="str_next">NEXT</string>
    <string name="SAVE">SAVE</string>
    <string name="NEXT">NEXT</string>
    <string name="BACK">BACK</string>
    <string name="str_done">DONE</string>
    <string name="mobile">Mobile</string>
    <string name="sign_up">Sign Up</string>
    <string name="str_tenant_name">HOME/ORGANIZATION</string>
    <string name="str_have_an_account">Already have an account? Sign In</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_password_length">Your Password Must Be At Least 8 Characters Long</string>
    <string name="str_password_match">Passwords Do Not Match</string>
</resources>
