<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="35dp"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="@string/edit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUsername"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:editable="false"
                android:enabled="false"
                android:id="@+id/edit_username"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_username"
                android:inputType="none"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edit_name"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_txt_name"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSurname"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edit_surname"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_txt_surname"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edit_email"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_txt_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputAddress"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edit_address"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_txt_address"
                android:inputType="textMultiLine"
                android:maxLength="50"
                android:maxLines="8"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            style="@style/loginButton"
            android:text="@string/str_update"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
