<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:id="@+id/register_layout"
    android:layout_gravity="center"
    android:layout_marginTop="35dp"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTenancyName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_tenant_name"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_tenant_name"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_txt_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_firstName"
                    style="@style/modifiedEditText"
                    android:hint="@string/str_first_name"
                    android:inputType="textAutoComplete"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_lastName"
                    style="@style/modifiedEditText"
                    android:hint="@string/str_last_name"
                    android:inputType="textAutoComplete"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_txt_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_confirm_password"
                style="@style/modifiedEditText"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/str_confirm_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signUp"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Sign Up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_sign_in"
                style="@style/viewParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textAlignment="center"
                android:onClick="viewForgotPAssword"
                android:text="Already have an account?Sign In"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
